--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
                   background-color: black;
             }
             .avt-round-contn img{
-                  width: 100px; /* Set the width of the avatar */
-                  height: 100px; /* Set the height of the avatar */
-                  border-radius: 100%; /* Make the shape circular */
-                  overflow:hidden; /* Hide any overflow content */
-                  border: 0.5px solid #ddd; /* Optional: Add a border */
+                  width: 100px; 
+                  height: 100px; 
+                  border-radius: 100%; /
+                  overflow:hidden; 
+                  border: 0.5px solid #ddd; 
                   object-fit:cover ;
             }
             button {
@@ -72,8 +72,8 @@
             .loading{
                   width: 20px;
                   height: 20px;
-                  border: 3px solid #f3f3f3; /* Light grey */
-                 // border-top: 3px solid #3498db; /* Blue */
+                  border: 3px solid #f3f3f3; 
+                 // border-top: 3px solid #3498db;
                   border-radius: 100%;
                   //animation: spin 1s linear infinite;
             }
